<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Vinilos App</string>
    <string name="collector">Coleccionista</string>
    <string name="collectors">Coleccionistas</string>
    <string name="agregar_cancion">Agregar Canciones</string>
    <string name="visitor">Visitante</string>
    <string name="albums_title">Albumes</string>
    <string name="albums_new">Nuevo Album</string>
    <string name="tracks_new">Agregar Canción a Album:</string>
    <string name="logout">Salir</string>
    <string name="title_activity_scrolling_album_details" />
    <string name="songs">Pistas</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="logo">Logo</string>
    <string name="albumes">Albumes</string>
    <string name="albums">albums</string>
    <string name="run">run</string>
    <string name="performers">Artistas</string>
    <string name="CollectorTelephone">Collector telephone</string>
    <string name="CollectorName">Collector Name</string>
    <string name="CollectorEmail">Collector email</string>
    <string name="descriptionArtistSelected">imagen que muestra al artista seleccionado</string>
    <string name="descriptionCollector">Imagen que identifica la descripción del coleccionista</string>
    <string name="descriptionCollectorList">imagen que mustra al coleccionista dentro de una lista</string>
...
    </string-array>

    <string-array name="recordLabels">
        <item name="sony">Sony Music</item>
        <item name="emi">EMI</item>
        <item name="discosFuentes">Discos Fuentes</item>
        <item name="elektra">Elektra</item>
        <item name="faniaRecords">Fania Records</item>
    </string-array>
</resources>
