<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:fontFamily="sans-serif-thin"
        android:padding="1dp"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <ImageView
        android:id="@+id/dice_image"
        android:layout_width="155dp"
        android:layout_height="193dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo"
        android:src="@drawable/login_image"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice_image"
        app:layout_constraintVertical_bias="0.25">

        <Button
            android:id="@+id/collector_button"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/login_button"
            android:text="@string/collector"
            android:textAllCaps="true"
...
